--- a/www/css/index.css
+++ b/www/css/index.css
@@ -34,6 +34,12 @@ html, body {
 #about-contributor span.label {
   font-size: 12px;
 }
+#menu .list-cover h1 {
+  font-size: 23px !important;
+}
+#menu i {
+  font-size: 25px;
+}
 @media only screen and (max-width : 385px) {
   .list .item h1, .list .item h2 {
       font-size: 14px;
